--- a/package.json
+++ b/package.json
@@ -7,28 +7,48 @@
   "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --config webpack.config.js",
-    "build": "webpack"
+    "start": " npm run build && node dist\\index.js",
+    "build": " rimraf dist/ && webpack  --config webpack.config.js"
   },
   "dependencies": {
-    "body-parser": "1.15.2",
+    "asyncawait": "^1.0.6",
+    "body-parser": "^1.18.2",
+    "camelcase-keys": "^4.1.0",
+    "child_process": "^1.0.2",
+    "compress": "^0.99.0",
     "compression": "1.6.2",
-    "cookie-parser": "1.4.3",
-    "cors": "2.8.1",
+    "config": "^1.27.0",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "cson": "^4.1.0",
     "debug": "^2.4.5",
+    "dgram": "^1.0.1",
     "dotenv": "^4.0.0",
-    "express": "4.14.0",
+    "express": "^4.16.2",
     "express-jwt": "5.1.0",
     "express-validation": "1.0.1",
-    "express-winston": "2.1.2",
-    "helmet": "3.1.0",
+    "express-winston": "^2.4.0",
+    "fs": "^0.0.1-security",
+    "helmet": "^3.9.0",
+    "hjson": "^3.1.0",
     "http-status": "^0.2.0",
     "joi": "10.0.6",
     "jsonwebtoken": "7.1.9",
+    "lodash": "^4.17.4",
     "method-override": "^2.3.5",
+    "module": "^1.2.5",
     "mongoose": "4.7.4",
-    "morgan": "1.7.0",
-    "sequelize": "^4.15.0",
+    "morgan": "^1.9.0",
+    "mysql2": "^1.4.2",
+    "net": "^1.0.2",
+    "path": "^0.12.7",
+    "pg-hstore": "^2.3.2",
+    "properties": "^1.2.1",
+    "sequelize": "^4.17.2",
+    "tedious": "^2.0.0",
+    "tls": "^0.0.1",
+    "toml": "^2.3.3",
+    "util": "^0.10.3",
     "webpack": "^3.8.1",
     "winston": "2.3.0"
   },
@@ -38,6 +58,7 @@
     "eslint-plugin-import": "1.16.0",
     "eslint-watch": "2.1.14",
     "rimraf": "^2.6.2",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "x2js": "^3.1.1"
   }
 }
