--- a/package.json
+++ b/package.json
@@ -5,15 +5,42 @@
   "main": "index.js",
   "author": "Phạm Nguyên Cát - Oscar",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nguyencatpham/effective-backend.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": " rimraf dist/ && webpack  --config webpack.config.js",
     "compile": "rimraf dist/ && babel index.js --out-dir dist && babel config --out-dir dist/config && babel src --out-dir dist/src",
-    "start": "npm run compile && nodemon dist/index.js"
+    "start": "npm run compile && nodemon dist/index.js",
+    "dev": "better-npm-run dev"
+  },
+  "betterScripts": {
+    "compile": {
+      "command": "babel-node bin/compile",
+      "env": {
+        "DEBUG": "app:*"
+      }
+    },
+    "dev": {
+      "command": "nodemon --exec babel-node bin/server",
+      "env": {
+        "NODE_ENV": "development",
+        "DEBUG": "app:*"
+      }
+    },
+    "deploy": {
+      "command": "npm run clean && npm run compile",
+      "env": {
+        "DEBUG": "app:*"
+      }
+    }
   },
   "dependencies": {
     "asyncawait": "^1.0.6",
     "babel-preset-es2015": "^6.24.1",
+    "better-npm-run": "^0.1.0",
     "body-parser": "^1.18.2",
     "camelcase-keys": "^4.1.0",
     "child_process": "^1.0.2",
@@ -23,7 +50,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "cson": "^4.1.0",
-    "debug": "^2.4.5",
+    "debug": "^3.1.0",
     "dgram": "^1.0.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
@@ -48,6 +75,7 @@
     "pg-hstore": "^2.3.2",
     "properties": "^1.2.1",
     "sequelize": "^4.17.2",
+    "swagger-jsdoc": "^1.9.7",
     "tedious": "^2.0.0",
     "tls": "^0.0.1",
     "toml": "^2.3.3",
