--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "asyncawait": "^1.0.6",
+    "babel-eslint": "^8.0.1",
     "babel-preset-es2015": "^6.24.1",
     "better-npm-run": "^0.1.0",
     "body-parser": "^1.18.2",
@@ -53,6 +54,7 @@
     "debug": "^3.1.0",
     "dgram": "^1.0.1",
     "dotenv": "^4.0.0",
+    "eslint-config-eslint": "^4.0.0",
     "express": "^4.16.2",
     "express-jwt": "5.1.0",
     "express-validation": "1.0.1",
@@ -85,7 +87,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "eslint": "3.16.1",
+    "eslint": "^4.9.0",
     "eslint-config-airbnb-base": "7.1.0",
     "eslint-plugin-import": "1.16.0",
     "eslint-watch": "2.1.14",
